app/assets/stylesheets/users.scss
.field {
	margin-top: 10px;
}
.avatar-upload-container img {
	float: left;
}

.avatar-upload {
	float: left;
	width: 300px;
  margin-left: 20px;
  p.small {
  	margin-top: 10px;
  }
}

.userthumb{
	margin-top: 25px;
	text-align: center;

	img {
		margin-top: 25px;
	}

	h4, p {
		display: inline-block;
		text-align:left;
	}
}

.user-info {
	display: inline-block;
	
}
.user-info ul{
	list-style:none;
	text-align:left;
}

.missing {
	border-color: #d83f34;
}

